[package]
name = "noxtls-crypto"
version = "0.2.1"
edition = "2021"
license = "GPL-2.0-only OR LicenseRef-Argenox-Commercial-License"
authors = ["Argenox Technologies LLC"]
repository = "https://github.com/argenox/noxtls"
homepage = "https://noxtls.com"
documentation = "https://github.com/argenox/noxtls"
description = "Internal implementation crate for noxtls: hash, symmetric cipher, public-key, and DRBG primitives."
readme = "../../README.md"
keywords = ["tls", "crypto", "aes", "rsa", "hkdf"]
categories = ["cryptography"]
rust-version = "1.75"

[dependencies]
noxtls-core = { version = "0.2.1", path = "../noxtls-core", default-features = false }
ml-kem = { version = "0.2.3", default-features = false, features = ["deterministic"] }

[features]
default = ["std", "alloc"]
std = ["noxtls-core/std"]
alloc = ["noxtls-core/alloc"]
hazardous-legacy-crypto = []

[lib]
path = "src/lib.rs"
