[package]
name = "noxtls-pem"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only OR LicenseRef-Argenox-Commercial-License"
authors = ["Argenox Technologies LLC"]
repository = "https://github.com/argenox/noxtls"
homepage = "https://argenox.com"
documentation = "https://github.com/argenox/noxtls"
description = "PEM encoding and decoding utilities for the noxtls Rust stack."
readme = "../../../README.md"
keywords = ["pem", "base64", "der", "crypto"]
categories = ["cryptography", "parser-implementations"]
rust-version = "1.75"

[dependencies]
noxtls-core = { version = "0.1.0", path = "../noxtls-core", default-features = false }

[features]
default = ["std", "alloc"]
std = ["noxtls-core/std"]
alloc = ["noxtls-core/alloc"]

[lib]
path = "src/lib.rs"
