[package]
name = "noxtls-test"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
# Workspace-only: never published to crates.io (see `cargo publish` docs for `publish = false`).
publish = false
description = "Workspace-only demo binaries and test helpers; not published to crates.io."
readme = "../../README.md"
rust-version = "1.75"

[dependencies]
noxtls = { version = "0.1.3", path = "../noxtls", default-features = false }
noxtls-crypto = { version = "0.1.3", path = "../noxtls-crypto", default-features = false }

[lib]
path = "src/lib.rs"

[[bin]]
name = "tls_test"
path = "src/bin/tls_test.rs"

[[bin]]
name = "sha_demo"
path = "src/bin/sha_demo.rs"

[[bin]]
name = "perf_baseline"
path = "src/bin/perf_baseline.rs"
